@@ -9,6 +9,10 @@
 	* xkb/XKBMAlloc.c:
 	Coverity #324: Fix potential NULL dereference.  (Alan Coopersmith)
 
+	* xkb/xkb.c:
+	Coverity #340: Fix potential NULL dereference.
+	Clean up proliferation of 'register int n' in loops of ProcXkbGetNames.
+
 2006-04-07  Aaron Plattner  <aplattner@nvidia.com>
 
 	* hw/xfree86/common/xf86Module.h:
